src/test/deca/syntax/parser/invalid/class_definition_in_class.deca
//Parser test, class definition in another class

class A {
    int x = 5;

    class B {
        int y = 12;
    }
}
